--- a/settings.json
+++ b/settings.json
@@ -4,11 +4,11 @@
 	"antihidetag": true,
 	"user_register": true,
 	"anti_delete" : false,
-	"anticall": false,
+	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
 	"ownerNumber": "6285763816560",
-	"ownerNumberr": "6285763816560",
+	"ownerNumberr": "19088806856",
 	"cr": "@ZeeoneOfc",
 	"ownername": "ZeeoneOfc",
 	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
