--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
     "self_mode": false,
-	"autobio": false,
+	"autobio": true,
 	"antihidetag": true,
 	"user_register": true,
 	"anti_delete" : false,
@@ -8,11 +8,11 @@
 	"prefix": ".",
 	"language":"ind",
 	"ownerNumber": "6285763816560",
-	"ownerNumberr": "19088806856",
-	"cr": "@ZeeoneOfc",
-	"ownername": "ZeeoneOfc",
-	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
+	"ownerNumberr": "6285763816560",
+	"cr": "⛩️͢⼜Jiixxy 𝙊̸𝙁̸𝘾̸͢ ⼜͢⛩️",
+	"ownername": "⛩️͢⼜Jiixxy 𝙊̸𝙁̸𝘾̸͢ ⼜͢⛩️",
+	"botname":"⛩️͢⼜Jiixxy 𝙊̸𝙁̸𝘾̸͢ ⼜͢⛩️",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  ⛩️͢⼜Jiixxy 𝙊̸𝙁̸𝘾̸͢ ⼜͢⛩️  」\nCreated By ⛩️͢⼜Jiixxy 𝙊̸𝙁̸𝘾̸͢ ⼜͢⛩️"
 }
