--- a/settings.json
+++ b/settings.json
@@ -7,12 +7,12 @@
 	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "6285763816560",
-	"ownerNumberr": "6285763816560",
-	"cr": "⛩️͢⼜Jiixxy 𝙊̸𝙁̸𝘾̸͢ ⼜͢⛩️",
-	"ownername": "⛩️͢⼜Jiixxy 𝙊̸𝙁̸𝘾̸͢ ⼜͢⛩️",
-	"botname":"⛩️͢⼜Jiixxy 𝙊̸𝙁̸𝘾̸͢ ⼜͢⛩️",
+	"ownerNumber": "62895605030379",
+	"ownerNumberr": "62895605030379",
+	"cr": "junedzz",
+	"ownername": "junedzz",
+	"botname":"junn bot",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  ⛩️͢⼜Jiixxy 𝙊̸𝙁̸𝘾̸͢ ⼜͢⛩️  」\nCreated By ⛩️͢⼜Jiixxy 𝙊̸𝙁̸𝘾̸͢ ⼜͢⛩️"
+	"fake": "junn bot"
 }
